--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,5 +13,21 @@ layout: default
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
+  <hr>
+   {% if page.tags.size > 0 %}
+    {% capture tags_content %} with<span class="icon-price-tag{% if page.tags.size > 1 %}s{% endif %}"></span>: {% endcapture %}
+    {% for post_tag in page.tags %}
+      {% assign tag = site.my_tags | where: "slug", post_tag %}
+      {% if tag %}
+        {% assign tag = tag[0] %}
+        {% capture tags_content_temp %}{{ tags_content }}<a href="{{site.baseurl}}{{ tag.url }}">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
+        {% assign tags_content = tags_content_temp %}
+      {% endif %}
+    {% endfor %}
+  {% else %}
+  {% endif %}
+  <p class="">
+      <small>Posted {{ tags_content }}</small>
+  </p>
   {% include disqus.html %}
 </article>
